<resources>
    <string name="app_name">ElectronicRosary</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="about_us">About_Us</string>
    <string name="our_locations">Our_Locations</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log Out</string>
    <string name="save">SAVE</string>
    <string name="select">SELECT</string>
    <string name="title_activity_maps">Map</string>

</resources>
